package klasy;

public abstract class Dane {
    public String login;
    public String password;
    public String miasto;
    public String ulica;
    public String nr_bud;
    public String email;
    public String phone;
    public String getLogin(){
        return login;
    }
    public String getPassword(){
        return password;
    }
    public String getMiasto(){
        return miasto;
    }
    public String getUlica(){
        return ulica;
    }
    public String getNr_bud(){
        return nr_bud;
    }
    public String getPhone(){
        return phone;
    }
    public String getEmail(){
        return email;
    }
}